--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -80,7 +80,7 @@
         <li><a href="https://www.stackoverflow.com/users/{{ author.stackoverflow }}"><i class="fab fa-fw fa-stack-overflow icon-pad-right" aria-hidden="true"></i>Stackoverflow</a></li>
       {% endif %}      
       {% if author.csdn %}
-      <li><a href="{{ author.csdn }}"><i class="fab fa-fw fa-copyright icon-pad-right" aria-hidden="true"></i>CSDN</a></li>
+      <li><a href="{{ author.csdn }}"><i style="color:#FC5733" class="fas fa-fw fa-copyright icon-pad-right" aria-hidden="true"></i>CSDN</a></li>
       {% endif %}
 
       <!-- Font Awesome icons / Social media -->
