update icon in side bar

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -154,10 +154,10 @@
         <li><a href="https://www.youtube.com/@{{ author.youtube }}"><i class="fab fa-fw fa-youtube icon-pad-right" aria-hidden="true"></i>YouTube</a></li>
       {% endif %}
       {% if author.zhihu %}
-      <li><a href="{{ author.zhihu }}"><i class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
+      <li><a href="{{ author.zhihu }}"><i style="color: #1772F6;" class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
       {% endif %}
       {% if author.xiaohongshu %}
-      <li><a href="{{ author.xiaohongshu }}"><i style='color:red' class="fab fa-fw fa-book-open icon-pad-right" aria-hidden="true"></i>XiaoHongShu</a></li>
+      <li><a href="{{ author.xiaohongshu }}"><i style='color:red' class="fas fa-fw fa-book-open icon-pad-right" aria-hidden="true"></i>XiaoHongShu</a></li>
       {% endif %}
     </ul>
   </div>
