update icon in side bar

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -157,7 +157,7 @@
       <li><a href="{{ author.zhihu }}"><i style="color: #1772F6;" class="fab fa-fw fa-zhihu icon-pad-right" aria-hidden="true"></i>Zhihu</a></li>
       {% endif %}
       {% if author.xiaohongshu %}
-      <li><a href="{{ author.xiaohongshu }}"><i style='color:red' class="fas fa-fw fa-book-open icon-pad-right" aria-hidden="true"></i>XiaoHongShu</a></li>
+      <li><a href="{{ author.xiaohongshu }}"><i class="fas fa-fw fa-book-open icon-pad-right" aria-hidden="true"></i>XiaoHongShu</a></li>
       {% endif %}
     </ul>
   </div>
