--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -42,7 +42,7 @@
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif post.collection == 'algorithms' %}
+        {% elsif post.collection == 'algorithms' || post.collection == 'projects' %}
           <p style="font-size: 16px; color: #888888; line-height: 1.2;">
             {{ post.date | date: "%B %d, %Y" }}
           </p>
